--- a/src/templates/Dna_seq.html
+++ b/src/templates/Dna_seq.html
@@ -201,21 +201,25 @@ border-radius: 12px;" class="button button6" onclick="submitForm('/downsampled_D
                 <p>The labels are the classes or the groups the genes are mapped into.The labels can act as both target variable or feature
                 as per the need of the user for solving their specific problem </p>
                 <h4>4.1 No Label</h4>
-                <p>This selection is provided to enable user to view the properties of all genes without labeling
-                    them into different gene categories or annotations. This is to let user examine the features of
+                <p>This selection is provided to enable users to view the properties of all genes without labeling
+                    them into different gene categories or annotations. This is to let users examine the features of
                     multiple genes and identify common patterns among them. As it involves the inspection of
                 all the genes therefore they work only for "Submit for analysis" button .</p>
                 <h4>4.2 Classical Genes</h4>
-                <p>Classical genes can be defined as most studied genes for visible mutant phenotype (for example: liguleless3). </p>
+                <p>Classical genes can be defined as the most well-studied genes mainly for their visible mutant phenotype (for example: liguleless3). </p>
                 <h4>4.3 Pan-genome Genes </h4>
-                <p>A gene in a given taxonomic group is either present in every individual (core), or absent in at least a single
-                    individual (dispensable) and so on . </p>
+                <p>A gene in a given taxonomic group is either present in every individual (core), or absent in at least a single individual (dispensable). </p>
                 <h4>4.4 Origin Genes </h4>
-                <p>Gene duplication is an important evolutionary mechanism allowing to provide new genetic material and thus
-                    opportunities to acquire new gene functions for an organism . There are different Origins of duplications
-                    such as WGD, Tandem and so on. </p>
+                <p>Gene duplication is an important evolutionary mechanism allowing new genetic material and thus opportunities to acquire new gene functions for an organism. There are different origins of duplications such as whole-genome duplications, tandems, etc.  </p>
                 <br>
                <h3>Graph interpretations:</h3>
+	<p>To the top right corner of the plots/graphs, there are options to download plot,
+                    zoom-out/zoom in, reset axes, autoscale, toggle spike lines, show closest data on hover, compare data on hover, box select,pan
+                and lasso. Users can also select specific legends to view data only for the selected legends. Details on the interactive plot options are available here:
+                <br>
+                    <a href = https://plotly.com/chart-studio-help/getting-to-know-the-plotly-modebar/>Interactive graph features</a>
+                    </p>
+
                 <h4>1. Count Dinucleic box plot</h4>
                 <p>The count Dinucleic box plot describes the number of dinucleotides within a DNA sequence.The plot helps to
                 visualize the counts of the occurrences of each possible di-mer for the chosen label sequences .</p>
