Made some bug fixes

--- a/src/templates/user_Gene_Features.html
+++ b/src/templates/user_Gene_Features.html
@@ -68,7 +68,7 @@ text-decoration: underline">Zm00001eb000060</a>:
     </div>
 <br>
 <br>
-<div id="bttn1_error" style="color: darkred; font-weight: bold; text-align: center"></div>
+<div id="bttn1_error" style="color: darkred; font-weight: bold; text-align: center">Please supply a list of genes in the box above.</div>
 <div style="width:200px;height:85px;margin-left:22px" class="btn1">
 <button style="background-color: #fff; /* Green */
   border: none;
